--- a/projects.yaml
+++ b/projects.yaml
@@ -7,6 +7,7 @@ configuration:
   require_license: false
   project_inactive_months: 12
   project_dead_months: 60
+  require_repo: false
 
 categories:
   - category: "theme"
