--- a/projects.yaml
+++ b/projects.yaml
@@ -89,40 +89,52 @@ projects:
     category: "integrations-cms"
 
   - name: AlpineJS
+    github_id: withastro/astro
     npm_id: "@astrojs/alpinejs"
     category: "integrations-frontend"
   - name: Preact
+    github_id: withastro/astro
     npm_id: "@astrojs/preact"
     category: "integrations-frontend"
   - name: Lit
+    github_id: withastro/astro
     npm_id: "@astrojs/lit"
     category: "integrations-frontend"
   - name: React
+    github_id: withastro/astro
     npm_id: "@astrojs/react"
     category: "integrations-frontend"
   - name: SolidJS
+    github_id: withastro/astro
     npm_id: "@astrojs/solid-js"
     category: "integrations-frontend"
   - name: Svelte
+    github_id: withastro/astro
     npm_id: "@astrojs/svelte"
     category: "integrations-frontend"
   - name: Vue
+    github_id: withastro/astro
     npm_id: "@astrojs/vue"
     category: "integrations-frontend"
 
   - name: Cloudflare
+    github_id: withastro/astro
     npm_id: "@astrojs/cloudflare"
     category: "integrations-ssr"
   - name: Deno
+    github_id: withastro/astro
     npm_id: "@astrojs/deno"
     category: "integrations-ssr"
   - name: Netlify
+    github_id: withastro/astro
     npm_id: "@astrojs/netlify"
     category: "integrations-ssr"
   - name: Node
+    github_id: withastro/astro
     npm_id: "@astrojs/node"
     category: "integrations-ssr"
   - name: Vercel
+    github_id: withastro/astro
     npm_id: "@astrojs/vercel"
     category: "integrations-ssr"
 
